# SongSyncer

./: .gitignore  Cargo.toml  LICENSE
src/: lastfm.rs  main.rs  responses.rs  spotify.rs
