[package]
name = "song_syncer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64-url = { version = "1.4" }
reqwest = { version = "0.11", features = ["json", "blocking"] }
rocket = { version = "0.4" }
serde = { version = "*", features = ["derive"] }
md5 = "0.7"
